--- a/projeto.html
+++ b/projeto.html
@@ -201,7 +201,7 @@
   </div>
 </div>
 
-<a href="https://mandic82.github.io/Bibliocolab/ConheçaoProjeto.html" class="btn">🛠️ Veja a estrutura básica</a>
+<a href="https://mandic82.github.io/Bibliocolab/ConheçaoProjeto.html" class="btn">🛠️Fluxo de Funcionamento</a>
   </div>
   
   </body>
