--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Como Funciona</title>
+  <title>Pipeline de Uso</title>
   <style>
     html, body {
       margin: 0;
@@ -126,7 +126,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>📖 Entenda o funcionamento.. </h1>
+    <h1>🔄 Pipeline de Uso</h1>
 
     <div class="timeline">
       <div class="step">
@@ -154,7 +154,7 @@
       </div>
     </div>
 
-    <a href="https://mandic82.github.io/Bibliocolab/trabalheaqui.html" class="btn">🛠️ Teste Agora</a>
+    <a href="https://mandic82.github.io/Bibliocolab/trabalheaqui.html" class="btn">🛠️ Teste o Funcionamento</a>
    </div>
 </body>
 </html>
