--- a/projeto.html
+++ b/projeto.html
@@ -16,14 +16,18 @@
       position: relative;
       overflow-x: hidden;
     }
+   
     body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      z-index: 0;
+    content: "";
+    position: fixed; /* garante que cobre toda a viewport */
+    top: 0; 
+    left: 0;
+    width: 100vw; /* usa viewport ao invés de % */
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 0;
     }
+
 
     .container {
       position: relative;
