--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -16,13 +16,16 @@
       position: relative;
       overflow-x: hidden;
     }
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      z-index: 0;
+  
+  body::before {
+  content: "";
+  position: fixed; /* garante que cobre toda a viewport */
+  top: 0; 
+  left: 0;
+  width: 100vw; /* usa viewport ao invés de % */
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 0;
     }
 
     .container {
