--- a/projeto.html
+++ b/projeto.html
@@ -130,7 +130,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>📖 Entenda o funcionamento.. </h1>
+    <h1>Sistema de Catalogação de Acervo Bibliográfico</h1>
 
    <div class="timeline">
   <div class="step">
