--- a/projeto.html
+++ b/projeto.html
@@ -126,6 +126,19 @@
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    
+    a {
+  color: #4da6ff; /* azul mais claro, visível no preto */
+  text-decoration: none; /* remove o sublinhado */
+  font-weight: 500;
+  transition: color 0.3s ease;
+     }
+
+    a:hover {
+     color: #82cfff; /* azul ainda mais claro no hover */
+     text-decoration: underline; /* aparece sublinhado só no hover */
+    }
+  
   </style>
 </head>
 <body>
