--- a/ConheçaoProjeto.html
+++ b/ConheçaoProjeto.html
@@ -144,7 +144,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Google_Colab_pic.png" alt="Google Colab">
         <div class="step-content">
           <h2>2. Processamento via Colab</h2>
-          <p>O script no <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank" style="color:#9cf;">Google Colab</a> acessa a imagem, aplica OCR e extrai os dados automaticamente.</p>
+          <p>O script no <a href="https://colab.research.google.com/drive/1TU8UcbrldH7mAEclHqyfCGcP5aYmjCK2?usp=sharing" target="_blank" style="color:#9cf;">Google Colab</a> acessa a imagem da capa / contra capa dos livros, aplica OCR e extrai os dados automaticamente.</p>
         </div>
       </div>
 
@@ -152,7 +152,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_Sheets_2020_Logo.svg" alt="Google Sheets">
         <div class="step-content">
           <h2>3. Visualização dos Dados</h2>
-          <p>Os dados extraídos são organizados em uma planilha acessível <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" style="color:#9cf;">aqui</a>.</p>
+          <p>Os dados extraídos tais como (Nome da obra | Autor | Edição | Ano da Publicação | Editora ) são organizados em uma <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUvYFF8wCk-Ag-mEkCu5pNaikK3ltHAuFx_-eguoaKgy2IRSwwL6wGze8ZOdMs_Q-14wSIRDUFvsRy/pubhtml?gid=0&single=true" target="_blank" style="color:#9cf;">planilha acessível</a>, armazenada no Google Drive.</p>
         </div>
       </div>
     </div>
